fix spacing

--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,14 +20,14 @@ body {
   }
 }
 
-h1, h2, h3, h4, {
+h1, h2, h3 {
   font-family: 'Cooper-Regular';
   margin: 0;
   padding: 0;
 }
 
-ul, li  {
-  font-family: 'Sofia-Pro';
+ul {
+    padding-inline-start: 0;
 }
 
 .body-container {
