--- a/scss/components/_schedule.scss
+++ b/scss/components/_schedule.scss
@@ -4,7 +4,7 @@
     margin-right:10%;
     flex-direction: column;
     margin-top: 10%;
-    margin-left: 10%;
+    margin-left: 10vw;
 
     section {
         width: 800px;
